# ows-events

./: .dockerignore  .eslintrc.json  .gitignore  .prettierignore  .prettierrc.json  Dockerfile  README.md  deploy.sh  docker-compose.auth.yml  docker-compose.build.yml  docker-compose.demo.new.yml  docker-compose.demo.yml  docker-compose.dev-mac.yml  docker-compose.dev-remote-localization.yml  docker-compose.dev.yml  docker-compose.parsing.yml  docker-compose.prod.new.yml  docker-compose.prod.yml  docker-compose.test.new.yml  docker-compose.test.yml  docker-compose.traefik.yml  docker-compose.win-old.yml  docker-compose.win.yml  docker-compose.yml  package-lock.json  package.json  vetur.config.js
localization/: .env.template  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.win.dev  Makefile  README.md  docker-compose.prod.yml  init_db.sql  pyproject.toml  requirements.txt  start.py
localization/root/: auth.py  config.py  create_app.py  database.py  semantic_core.py  server.py  session.py
localization/root/api/categories/: categories_model.py  category_query.py  router.py  schemas.py
localization/root/api/censorship/: main.py  router.py
localization/root/api/censorship/tests/: event_validator_tests.py
localization/root/api/censorship/types/: event_validator_errors.py  (+1 more)
localization/root/api/location/: router.py
localization/root/api/qr/: main_qr.py  router.py
localization/root/api/text/: language_recognizer.py  router.py  schemas.py  translate_model.py  translate_query.py
localization/root/api/users/: auth.py  router.py  schemas.py  user_model.py
(+673 files in other folders)
