[tool.poetry]
name = "ows-events-localisation"
version = "0.1.0"
description = "APIs for Afisha"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "root"}]

[tool.poetry.dependencies]
python = "^3.10"
flask = "^2.3.2"
flask-cors = "^4.0.0"
flask-wtf = "^1.1.1"
path = "16.3.0"
mtranslate = "^1.8"
psycopg2-binary = "^2.9.7"
python-dotenv = "^1.0.0"
openai = "^0.27.8"
pillow = "9.0.1"
pyzbar = "0.1.8"
qrcode = "7.3.1"
pydantic = "^2.1.1"
pydantic-settings = "^2.0.2"
sqlalchemy = "1.4.40"
polyglot = "^16.7.4"
pyicu = "^2.11"
six = "^1.16.0"
futures = "3.0.5"
morfessor = "^2.0.6"
numpy = "^1.25.2"
pycld2 = "^0.41"
bcrypt = "^4.0.1"
passlib = "^1.7.4"
pytest = "^7.4.0"
flask-jwt-extended = "^4.5.2"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.3.3"

[tool.black]
line_lenght = 120

[tool.isort]
profile = "black"

[tool.mypy]

[tool.flake8]
max-line-length = 120
ignore = ['F541', 'W503', ]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
